fix the transition shaking issue, layout issue

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -15,10 +15,14 @@ body, html {
 
 .fade-enter-active,
 .fade-leave-active {
-  transition: all 0.8s ease-in-out
+  transition: all 1.5s ease-in-out
 }
 
 .fade-enter-from,
-.fade-leave-to {
-  opacity: 0
+.fade-leave {
+  opacity: 0;
+}
+
+.fade-leave-to{
+  display: none;
 }
